# Nueral-Network

./: .gitignore  CMakeLists.txt  DataSet.cpp  Main.cpp  Neural Network.sln  Neural Network.vcxproj  Neural Network.vcxproj.filters  NeuralNetwork.cpp  NeuralNetwork.h  NueralNetwork.cpp  NueralNetwork.h  README.md
Math/: Math.cpp  Matrix.cpp  Matrix.h
include/NeuralNetwork/: DataSet.h
include/NeuralNetwork/Math/: Math.h
src/: DataSet.cpp  Main.cpp  NeuralNetwork.cpp
src/Math/: Math.cpp  Matrix.cpp
x64/Debug/: Neural Network.exe.recipe  Neural Network.ilk  Neural Network.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/Neural Network.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Neural Network.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
